// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render with placeholder 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "action": Object {
        "onClick": [MockFunction],
        "type": "cancel",
      },
      "placeholder": "请输入关键词",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`SearchBar should render with placeholder 2`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "action": Object {
        "onClick": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "type": "cancel",
      },
      "placeholder": "请输入关键词",
    },
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
